A patch from Sascha Rodekamp related to "The minimize/enlarge buttons (+ -) blocks the layer" (https://issues.apache.org/jira/browse/OFBIZ-3692) - OFBIZ-3692
This patch fixes also some issues with buttons inside lookups not showing. However the main reason is still not fixed in the case of lookup rendered from FTL files

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@936008 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bluelight/webapp/bluelight/style.css
+++ b/themes/bluelight/webapp/bluelight/style.css
@@ -2233,7 +2233,8 @@ Lookups
 
  #fieldLookupContent ul li a {
     display: inherit;
-     cursor: pointer;
+    cursor: pointer;
+    background: none;
  }
 
  #fieldLookupContent td {
@@ -2241,8 +2242,9 @@ Lookups
     padding-bottom: 5px;
  }
 
- #fieldLookupContent td ul li a {
-    background: url(/images/fieldlookup.gif) no-repeat;
+ #fieldLookupContent td span a {
+    background: url(/bluelight/images/application_view_list.png) no-repeat;
+    display: inline-block;
  }
 
  #fieldLookupContent td a {
