--- a/themes/flatgrey/webapp/flatgrey/maincss.css
+++ b/themes/flatgrey/webapp/flatgrey/maincss.css
@@ -2264,7 +2264,8 @@ Lookups
 /* overwrite */
  #fieldLookupContent ul li a {
     display: inherit;
-     cursor: pointer;
+    cursor: pointer;
+    background: none;
  }
 
  #fieldLookupContent td {
@@ -2272,8 +2273,9 @@ Lookups
     padding-bottom: 5px;
  }
 
- #fieldLookupContent td ul li a {
+ #fieldLookupContent td span a {
     background: url(/images/fieldlookup.gif) no-repeat;
+    display: inline-block;
  }
 
  #fieldLookupContent td a {
